--- a/package.json
+++ b/package.json
@@ -1,45 +1,45 @@
 {
-    "name"           : "generator-clam",
-    "version"        : "0.1.65",
-    "description"    : "A Clam generator for Yeoman",
-    "keywords"       : [
-        "yeoman-generator",
-        "clam",
-        "generator-clam"
-    ],
-    "homepage"       : "https://github.com/jayli/generator-clam",
-    "bugs"           : "https://github.com/jayli/generator-clam/issues",
-    "author"         : {
-        "name" : "bachi",
-        "email": "bachi@taobao.com",
-        "url"  : "https://github.com/jayli"
-    },
-    "readmeFilename" : "README.md",
-    "_from"          : "generator-clam@",
-    "main"           : "app/index.js",
-    "repository"     : {
-        "type": "git",
-        "url" : "git://github.com/jayli/generator-clam.git"
-    },
-    "scripts"        : {
-        "test": "mocha"
-    },
-    "dependencies"   : {
-        "abc-generator"   : "~0.0.3",
-        "yeoman-generator": "~0.13.3",
-        "rmdir": "~1.0.4",
-        "promise"         : ""
-
-    },
-    "devDependencies": {
-        "mocha": "~1.10.0"
-    },
-    "engines"        : {
-        "node": ">=0.8.0"
-    },
-    "licenses"       : [
-        {
-            "type": "MIT"
-        }
-    ]
+  "name": "generator-clam",
+  "version": "0.1.65",
+  "description": "A Clam generator for Yeoman",
+  "keywords": [
+    "yeoman-generator",
+    "clam",
+    "generator-clam"
+  ],
+  "homepage": "https://github.com/jayli/generator-clam",
+  "bugs": "https://github.com/jayli/generator-clam/issues",
+  "author": {
+    "name": "bachi",
+    "email": "bachi@taobao.com",
+    "url": "https://github.com/jayli"
+  },
+  "readmeFilename": "README.md",
+  "_from": "generator-clam@",
+  "main": "app/index.js",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/jayli/generator-clam.git"
+  },
+  "scripts": {
+    "test": "mocha"
+  },
+  "dependencies": {
+    "abc-generator": "~0.0.3",
+    "git-config": "0.0.6",
+    "promise": "",
+    "rmdir": "~1.0.4",
+    "yeoman-generator": "~0.13.3"
+  },
+  "devDependencies": {
+    "mocha": "~1.10.0"
+  },
+  "engines": {
+    "node": ">=0.8.0"
+  },
+  "licenses": [
+    {
+      "type": "MIT"
+    }
+  ]
 }
